# igpsport-mcp

./: .gitignore  CLAUDE.md  Dockerfile  README.en.md  README.md  README.zh-CN.md  glama.json  pyproject.toml  server.json
.github/workflows/: release.yml
src/igpsport_mcp/: __init__.py  __main__.py  config.py  exceptions.py  i18n.py  server.py
src/igpsport_mcp/analysis/: __init__.py  compact.py  hr.py  load.py  power.py  summary.py  thresholds.py
src/igpsport_mcp/client/: __init__.py  auth.py  edge_core_wasm_bg.wasm  endpoints.py  igpsport.py  region.py  signer.py
src/igpsport_mcp/fit/: __init__.py  parser.py
src/igpsport_mcp/storage/: __init__.py  db.py  schema.sql
src/igpsport_mcp/tools/: __init__.py  _normalize.py  _service.py  activities.py  athlete.py  compare.py  laps.py  segments.py  streams.py  training_load.py  workouts.py
src/igpsport_mcp/workout/: __init__.py  ics.py  ir.py
tests/: conftest.py  test_auth.py  test_client.py  test_compact.py  test_config.py  test_db.py  test_fit.py  test_hr.py  test_load.py  test_normalize.py  test_power.py  test_server.py  test_service.py  test_signer.py  test_summary.py  test_thresholds.py  test_tools.py  test_workout_ics.py  test_workout_ir.py
