[project]
name = "igpsport-mcp"
version = "0.1.0"
description = "Local MCP server exposing iGPSport cycling data with server-side training metrics (NP/IF/TSS/CTL/ATL/TSB)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "dengxuhui" }]
keywords = ["mcp", "igpsport", "cycling", "training", "fit"]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "fitparse>=1.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "cryptography>=42",
    "wasmtime>=21",
]

[project.scripts]
igpsport-mcp = "igpsport_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-httpx>=0.30",
    "pytest-cov>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/igpsport_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/igpsport_mcp/client/edge_core_wasm_bg.wasm" = "igpsport_mcp/client/edge_core_wasm_bg.wasm"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not integration'"
markers = [
    "integration: hits the live iGPSport host; run with -m integration",
]
filterwarnings = [
    "ignore::DeprecationWarning:fitparse.processors",
    "ignore::ResourceWarning:fitparse.records",
]

[tool.coverage.run]
source = ["igpsport_mcp"]
branch = true
